# vibe-analyzer

./: .gitignore  CLAUDE.md  README.md
backend/: .cache  .env.example  main.py  pyproject.toml  render.yaml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  TrackList.tsx  VibeBadge.tsx  VibeChart.tsx  VibeMatcher.tsx
frontend/src/hooks/: useCommentAnalysis.ts  useLenis.ts  useScrollReveal.ts  useToast.tsx  useTrackFeatures.ts
frontend/src/types/: api.ts
frontend/src/utils/: sentiment.ts
