[project]
name = "vibe-analyzer-backend"
version = "0.1.0"
description = "YouTube + Spotify Vibe Analyzer — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "spotipy>=2.23.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]
